--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -45,8 +45,9 @@
     <LinearLayout
         android:id="@+id/linearLayout4"
         android:layout_width="340dp"
-        android:layout_height="449dp"
-        android:background="#77A676"
+        android:layout_height="490dp"
+        android:background="@drawable/corner"
+        android:fontFamily="@font/anek_devanagari_medium"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,6 +64,7 @@
             android:layout_marginBottom="5dp"
             android:gravity="center_horizontal"
             android:text="Nombre"
+            android:fontFamily="@font/anek_devanagari_medium"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20dp" />
@@ -87,6 +89,7 @@
             android:layout_marginBottom="5dp"
             android:gravity="center_horizontal"
             android:text="Correo"
+            android:fontFamily="@font/anek_devanagari_medium"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20dp" />
@@ -111,6 +114,7 @@
             android:layout_marginBottom="5dp"
             android:gravity="center_horizontal"
             android:text="Contraseña"
+            android:fontFamily="@font/anek_devanagari_medium"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20dp" />
@@ -136,6 +140,7 @@
             android:layout_marginBottom="5dp"
             android:gravity="center_horizontal"
             android:text="Edad"
+            android:fontFamily="@font/anek_devanagari_medium"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20dp" />
@@ -160,6 +165,7 @@
             android:layout_marginBottom="5dp"
             android:gravity="center_horizontal"
             android:text="Ciudad"
+            android:fontFamily="@font/anek_devanagari_medium"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20dp" />
@@ -185,6 +191,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:text="Registro"
+        android:fontFamily="@font/anek_devanagari_medium"
         android:textColor="@color/black"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -196,7 +203,7 @@
         android:id="@+id/imageView7"
         android:layout_width="185dp"
         android:layout_height="101dp"
-        android:layout_marginBottom="772dp"
+        android:layout_marginBottom="768dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -209,6 +216,7 @@
         android:backgroundTint="#77A676"
         android:onClick="Register"
         android:text="Registrar"
+        android:fontFamily="@font/anek_devanagari_medium"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -223,6 +231,7 @@
         android:backgroundTint="#77A676"
         android:onClick="MenuP"
         android:text="Regresar"
+        android:fontFamily="@font/anek_devanagari_medium"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
