--- a/app/src/main/res/layout/activity_control_salud.xml
+++ b/app/src/main/res/layout/activity_control_salud.xml
@@ -49,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:text="Control de salud"
+        android:fontFamily="@font/anek_devanagari_medium"
         android:textColor="@color/black"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,22 +58,24 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:layout_width="295dp"
-        android:layout_height="442dp"
-        android:background="#77A676"
+        android:layout_width="296dp"
+        android:layout_height="585dp"
+        android:background="@drawable/corner"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.604"
+        app:layout_constraintHorizontal_bias="0.582"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.414">
+        app:layout_constraintVertical_bias="0.529">
 
         <TextView
             android:id="@+id/textView16"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:text="Numero de control Medico "
+            android:layout_marginTop="10dp"
+            android:text="Numero de control Medico"
+            android:fontFamily="@font/anek_devanagari_medium"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="16sp" />
@@ -94,6 +97,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Comidas cronometradas"
+            android:fontFamily="@font/anek_devanagari_medium"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="17dp" />
@@ -114,6 +118,7 @@
             android:layout_height="33dp"
             android:layout_marginTop="10dp"
             android:text="Altura"
+            android:fontFamily="@font/anek_devanagari_medium"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="17dp" />
@@ -121,7 +126,7 @@
         <EditText
             android:id="@+id/editTextText8"
             android:layout_width="match_parent"
-            android:layout_height="37dp"
+            android:layout_height="41dp"
             android:layout_marginTop="10dp"
             android:background="@color/white"
             android:ems="10"
@@ -134,8 +139,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:paddingTop="15dp"
             android:text="Enfermedades"
+            android:fontFamily="@font/anek_devanagari_medium"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="17dp" />
@@ -143,7 +148,7 @@
         <EditText
             android:id="@+id/editTextText9"
             android:layout_width="match_parent"
-            android:layout_height="37dp"
+            android:layout_height="34dp"
             android:layout_marginTop="10dp"
             android:background="@color/white"
             android:ems="10"
@@ -156,6 +161,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Peso"
+            android:fontFamily="@font/anek_devanagari_medium"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="17dp" />
@@ -163,53 +169,63 @@
         <EditText
             android:id="@+id/editTextText10"
             android:layout_width="match_parent"
-            android:layout_height="37dp"
+            android:layout_height="35dp"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:background="@color/white"
             android:ems="10"
             android:inputType="text"
             android:textColor="#000000" />
 
-    </LinearLayout>
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="#BED9BA"
+            android:onClick="MenuP"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/anek_devanagari_medium"
+            android:text="Regresar "
+            android:textColor="@color/black" />
 
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:backgroundTint="#BED9BA"
+            android:fontFamily="@font/anek_devanagari_medium"
+            android:text="Actualizar"
+            android:textColor="@color/black" />
+
+    </LinearLayout>
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="185dp"
         android:layout_height="101dp"
-        android:layout_marginBottom="772dp"
+        android:layout_marginBottom="768dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@mipmap/bann_nutri_background" />
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="274dp"
-        android:layout_height="51dp"
-        android:backgroundTint="#77A676"
-        android:text="Actualizar"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.66"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.889" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="273dp"
-        android:layout_height="50dp"
-        android:backgroundTint="#77A676"
-        android:onClick="MenuP"
-        android:text="Regresar "
-        android:textColor="@color/black"
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginBottom="148dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.675"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.808" />
+        app:srcCompat="@drawable/confirmar" />
 
-
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginBottom="208dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/regresar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
