--- a/app/src/main/res/layout/activity_recomendaciones_ej.xml
+++ b/app/src/main/res/layout/activity_recomendaciones_ej.xml
@@ -15,6 +15,7 @@
         android:layout_marginBottom="72dp"
         android:backgroundTint="#77A676"
         android:onClick="MenuP"
+        android:fontFamily="@font/anek_devanagari_medium"
         android:text="Regresar a la Pantalla Principal"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -55,7 +56,8 @@
     <LinearLayout
         android:layout_width="356dp"
         android:layout_height="448dp"
-        android:background="#77A676"
+        android:background="@drawable/corner"
+
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +68,8 @@
 
         <ListView
             android:layout_width="344dp"
-            android:layout_height="397dp" />
+            android:layout_height="397dp"
+            android:fontFamily="@font/anek_devanagari_medium"/>
 
     </LinearLayout>
 
@@ -76,6 +79,7 @@
         android:layout_height="wrap_content"
         android:text="Recomendaciones de ejercicios"
         android:textColor="@color/black"
+        android:fontFamily="@font/anek_devanagari_medium"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,7 +125,7 @@
         android:id="@+id/imageView7"
         android:layout_width="185dp"
         android:layout_height="101dp"
-        android:layout_marginBottom="772dp"
+        android:layout_marginBottom="768dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
