--- a/app/src/main/res/layout/activity_agregar_comida.xml
+++ b/app/src/main/res/layout/activity_agregar_comida.xml
@@ -235,7 +235,7 @@
         android:layout_marginBottom="36dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView8"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/confirmar" />
+        app:srcCompat="@drawable/update" />
 
     <ImageView
         android:id="@+id/imageView8"
