--- a/app/src/main/res/layout/activity_control_salud.xml
+++ b/app/src/main/res/layout/activity_control_salud.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -58,10 +57,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:layout_width="296dp"
-        android:layout_height="585dp"
+        android:layout_width="345dp"
+        android:layout_height="421dp"
         android:background="@drawable/corner"
         android:orientation="vertical"
+        android:layout_marginTop="-250dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.582"
@@ -69,136 +69,163 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.529">
 
-        <TextView
-            android:id="@+id/textView16"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="10dp"
-            android:text="Numero de control Medico"
-            android:fontFamily="@font/anek_devanagari_medium"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+        <TableLayout
+            android:id="@+id/info"
+            android:layout_width="348dp"
+            android:layout_height="415dp"
+            android:background="@drawable/corner"
+            android:stretchColumns="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.507"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.348">
 
-        <EditText
-            android:id="@+id/editTextText6"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginTop="10dp"
-            android:autoText="false"
-            android:background="@color/white"
-            android:ems="10"
-            android:inputType="text"
-            android:textColor="#000000" />
+            <TableRow android:layout_marginTop="20dp">
 
-        <TextView
-            android:id="@+id/textView18"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Comidas cronometradas"
-            android:fontFamily="@font/anek_devanagari_medium"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="17dp" />
+                <TextView
+                    android:layout_marginRight="20dp"
+                    android:fontFamily="@font/anek_devanagari_medium"
+                    android:padding="8dp"
+                    android:text="Identificador Médico:"
+                    android:textColor="@color/black" />
 
-        <EditText
-            android:id="@+id/editTextText7"
-            android:layout_width="match_parent"
-            android:layout_height="37dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/white"
-            android:ems="10"
-            android:inputType="text"
-            android:textColor="#000000" />
+                <EditText
+                    android:id="@+id/edtNMedico"
+                    android:layout_marginRight="10dp"
+                    android:background="@color/white"
+                    android:clickable="false"
+                    android:editable="false"
+                    android:inputType="number"
+                    android:textColor="@color/black" />
+            </TableRow>
 
-        <TextView
-            android:id="@+id/textView17"
-            android:layout_width="match_parent"
-            android:layout_height="33dp"
-            android:layout_marginTop="10dp"
-            android:text="Altura"
-            android:fontFamily="@font/anek_devanagari_medium"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="17dp" />
+            <TableRow android:layout_marginTop="10dp">
 
-        <EditText
-            android:id="@+id/editTextText8"
-            android:layout_width="match_parent"
-            android:layout_height="41dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/white"
-            android:ems="10"
-            android:inputType="text"
-            android:textColor="#000000" />
+                <TextView
+                    android:layout_marginRight="20dp"
+                    android:fontFamily="@font/anek_devanagari_medium"
+                    android:padding="8dp"
+                    android:text="Comidas cronometradas:"
+                    android:textColor="@color/black" />
 
-        <TextView
-            android:id="@+id/textView19"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:text="Enfermedades"
-            android:fontFamily="@font/anek_devanagari_medium"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="17dp" />
+                <EditText
+                    android:id="@+id/edtcomidas"
+                    android:layout_marginRight="10dp"
+                    android:background="@color/white"
+                    android:inputType="number"
+                    android:textColor="@color/black" />
+            </TableRow>
 
-        <EditText
-            android:id="@+id/editTextText9"
-            android:layout_width="match_parent"
-            android:layout_height="34dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/white"
-            android:ems="10"
-            android:inputType="text"
-            android:textColor="#000000" />
+            <TableRow android:layout_marginTop="10dp">
 
-        <TextView
-            android:id="@+id/textView20"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Peso"
-            android:fontFamily="@font/anek_devanagari_medium"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="17dp" />
+                <TextView
+                    android:layout_marginRight="20dp"
+                    android:fontFamily="@font/anek_devanagari_medium"
+                    android:padding="8dp"
+                    android:text="Enfermedades"
+                    android:textColor="@color/black" />
 
-        <EditText
-            android:id="@+id/editTextText10"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@color/white"
-            android:ems="10"
-            android:inputType="text"
-            android:textColor="#000000" />
+                <EditText
+                    android:id="@+id/edtEnfer"
+                    android:layout_marginRight="10dp"
+                    android:background="@color/white"
+                    android:inputType="text"
+                    android:textColor="@color/black" />
+            </TableRow>
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="#BED9BA"
-            android:onClick="MenuP"
-            android:layout_marginBottom="10dp"
-            android:fontFamily="@font/anek_devanagari_medium"
-            android:text="Regresar "
-            android:textColor="@color/black" />
+            <TableRow android:layout_marginTop="10dp">
 
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:backgroundTint="#BED9BA"
-            android:fontFamily="@font/anek_devanagari_medium"
-            android:text="Actualizar"
-            android:textColor="@color/black" />
+                <TextView
+                    android:layout_marginRight="20dp"
+                    android:fontFamily="@font/anek_devanagari_medium"
+                    android:padding="8dp"
+                    android:text="Calorías Consumidas:"
+                    android:textColor="@color/black" />
+
+                <EditText
+                    android:id="@+id/edtTotalC"
+                    android:layout_marginRight="10dp"
+                    android:background="@color/white"
+                    android:inputType="number"
+                    android:textColor="@color/black" />
+            </TableRow>
+
+            <TableRow android:layout_marginTop="10dp">
+
+                <TextView
+                    android:layout_marginRight="20dp"
+                    android:fontFamily="@font/anek_devanagari_medium"
+                    android:padding="8dp"
+                    android:text="Medicamentos"
+                    android:textColor="@color/black" />
+
+                <EditText
+                    android:id="@+id/edtmedicina"
+                    android:layout_marginRight="10dp"
+                    android:background="@color/white"
+                    android:inputType="text"
+                    android:textColor="@color/black" />
+            </TableRow>
+
+            <TableRow android:layout_marginTop="10dp">
+
+                <TextView
+                    android:layout_marginRight="20dp"
+                    android:fontFamily="@font/anek_devanagari_medium"
+                    android:padding="8dp"
+                    android:text="Telefono"
+                    android:textColor="@color/black" />
+
+                <EditText
+                    android:id="@+id/edtNumber"
+                    android:layout_marginRight="10dp"
+                    android:background="@color/white"
+                    android:inputType="number"
+                    android:textColor="@color/black" />
+            </TableRow>
+
+            <TableRow android:layout_marginTop="10dp">
+
+                <TextView
+                    android:layout_marginRight="20dp"
+                    android:fontFamily="@font/anek_devanagari_medium"
+                    android:padding="8dp"
+                    android:text="Enfermedades:"
+                    android:textColor="@color/black" />
+
+                <EditText
+                    android:id="@+id/edtEnf"
+                    android:layout_marginRight="10dp"
+                    android:background="@color/white"
+                    android:inputType="text"
+                    android:textColor="@color/black" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:layout_marginRight="20dp"
+                    android:fontFamily="@font/anek_devanagari_medium"
+                    android:padding="8dp"
+                    android:text="Nutriólogo:"
+                    android:textColor="@color/black" />
+
+                <EditText
+                    android:id="@+id/edtnutri"
+                    android:layout_marginRight="10dp"
+                    android:background="@color/white"
+                    android:inputType="text"
+                    android:textColor="@color/black" />
+            </TableRow>
+        </TableLayout>
 
     </LinearLayout>
+
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="185dp"
@@ -209,23 +236,49 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@mipmap/bann_nutri_background" />
 
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="323dp"
+        android:layout_height="46dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="128dp"
+        android:backgroundTint="#77A676"
+        android:onClick="MenuP"
+        android:text="Regresar "
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="323dp"
+        android:layout_height="46dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="220dp"
+        android:backgroundTint="#77A676"
+        android:text="Actualizar"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginBottom="148dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginBottom="223dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/confirmar" />
+        app:srcCompat="@drawable/update" />
 
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginBottom="208dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginBottom="132dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/regresar" />
+        app:srcCompat="@drawable/comeback" />
 </androidx.constraintlayout.widget.ConstraintLayout>
