--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -77,8 +77,9 @@
             android:layout_height="107dp"
             android:gravity="center_horizontal"
             android:onClick="seguimiento_ali"
+            android:padding="20dp"
             android:fontFamily="@font/anek_devanagari_medium"
-            android:text="Informacion acerca del seguimiento de Calorias  Nutrientes y Alimentos"
+            android:text="Gestion de Alimentos"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="15dp" />
@@ -168,19 +169,19 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="142dp"
-        android:layout_height="48dp"
+        android:layout_width="179dp"
+        android:layout_height="59dp"
         android:backgroundTint="#77A676"
+        android:fontFamily="@font/anek_devanagari_medium"
         android:onClick="cerrar"
         android:text="Cerrar sesion"
         android:textColor="@color/black"
-        android:fontFamily="@font/anek_devanagari_medium"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.899" />
+        app:layout_constraintVertical_bias="0.898" />
 
     <ImageView
         android:id="@+id/imageView7"
@@ -191,6 +192,47 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@mipmap/bann_nutri_background" />
+
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="36dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="90dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.338"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/cerrar_sesion" />
+
+    <ImageView
+        android:id="@+id/imageView11"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="222dp"
+        android:layout_marginEnd="164dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/salu" />
+
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginEnd="164dp"
+        android:layout_marginBottom="370dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/food" />
+
+    <ImageView
+        android:id="@+id/imageView13"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginEnd="164dp"
+        android:layout_marginBottom="180dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/fit" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
