--- a/app/src/main/res/layout/activity_control_salud.xml
+++ b/app/src/main/res/layout/activity_control_salud.xml
@@ -94,7 +94,7 @@
                     android:id="@+id/edtNMedico"
                     android:layout_marginRight="10dp"
                     android:background="@color/white"
-                    android:clickable="false"
+
                     android:editable="false"
                     android:inputType="number"
                     android:textColor="@color/black" />
@@ -191,11 +191,11 @@
                     android:layout_marginRight="20dp"
                     android:padding="8dp"
 
-                    android:text="Enfermedades:"
+                    android:text="Nutriologo"
                     android:textColor="@color/black" />
 
                 <EditText
-                    android:id="@+id/edtEnf"
+                    android:id="@+id/edtnutri"
                     android:layout_marginRight="10dp"
                     android:background="@color/white"
                     android:textColor="@color/black"
@@ -210,11 +210,11 @@
                     android:layout_marginRight="20dp"
                     android:padding="8dp"
 
-                    android:text="Nutriólogo:"
+                    android:text="Contacto Nutriologo:"
                     android:textColor="@color/black" />
 
                 <EditText
-                    android:id="@+id/edtnutri"
+                    android:id="@+id/edtnumNutri"
                     android:layout_marginRight="10dp"
                     android:background="@color/white"
                     android:textColor="@color/black"
